--- a/gb/10/7/4/n2956799.md
+++ b/gb/10/7/4/n2956799.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rnrmrq3333/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rnrmrq3333/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rnrmrq3333/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rnrmrq3333/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rnrmrq3333/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>宠物登记加绝育 减少流浪狗</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元7月4日报导】－流浪动物照护专题之2（中央社记者林惠君台北 4日电）政府推动宠物植入晶片多年，<ahref="https://github.com/rnrmrq3333/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E7%8B%97.md#1">流浪狗</a>却似乎有增无减。动保团体推估，宠物登记比例不到一半，流浪狗主要来自弃养，加上宠物绝育率低，被弃养的流浪狗不断繁殖，数量很难减少。</p>
+<p>【大纪元7月4日报导】－流浪动物照护专题之2（中央社记者林惠君台北 4日电）政府推动宠物植入晶片多年，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E7%8B%97.md#1">流浪狗</a>却似乎有增无减。动保团体推估，宠物登记比例不到一半，流浪狗主要来自弃养，加上宠物绝育率低，被弃养的流浪狗不断繁殖，数量很难减少。</p>
 <p>中华民国保护动物协会秘书长黄庆荣表示，全台宠物上网登记的头数约84万多头，推估登记的宠物中，只有31%办理绝育手术。</p>
-<p>他说，<ahref="https://github.com/rnrmrq3333/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E7%8B%97.md#1">流浪狗</a>主要来自人类弃养，以及流浪狗繁殖的第 2代，再其次才是迷途走失。虽然不论是政府、民间动保团体或爱心人士，都投入大量人力与经费绝育流浪动物，但身体强壮具有繁殖能力的流浪动物难以捕捉，“绝育的数目永远赶不上生育的数目”。</p>
+<p>他说，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B5%81%E6%B5%AA%E7%8B%97.md#1">流浪狗</a>主要来自人类弃养，以及流浪狗繁殖的第 2代，再其次才是迷途走失。虽然不论是政府、民间动保团体或爱心人士，都投入大量人力与经费绝育流浪动物，但身体强壮具有繁殖能力的流浪动物难以捕捉，“绝育的数目永远赶不上生育的数目”。</p>
 <p>他补充，加上全台各地有很多爱心人士不忍流浪动物受饿，定点定时喂食流浪动物，让它们获得足够的营养，更提高繁殖能力。</p>
 <p>流浪动物花园理事长黄美华也表示，有很多社区妈妈或社区爸爸很有爱心，会固定在社区喂养流浪狗，但可能认知不够，一下子流浪狗会繁殖很多。遇到这种状况，动保团体会花一段时间跟对方沟通，并补助结扎的经费。</p>
 <p>成立不到10年的流浪动物花园，透过网路的宣导与教育，成为国人熟知的动保团体之一。流浪动物花园推广“以领养代替购买，以结扎代替扑杀”，并推动“TNR”，即trap（捕捉）、neuter（结扎）、release（放养）。</p>
@@ -29,48 +29,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/5/26/n2919041.md#1">流浪狗夫妻感人绝恋  3离3聚打动市民</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/5/28/n2921801.md#1">正德护生慈善会 收养流浪狗</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/6/2/n2925661.md#1">罹患性病令人忧 信义野狗别乱摸</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/6/19/n2942029.md#1">狗狗们围着他享用美食 温馨画面让人感到“喂食”也是一种享受啊！</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/6/19/n2942251.md#1">流浪狗找到新家 瘫犬变狗医生</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/6/21/n2943386.md#1">捡来的狗难计价  被弄丢判免赔</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/6/28/n2950317.md#1">逃家黑天鹅 飞14公里被犬欺</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/6/30/n2953245.md#1">带流浪狗回美国  爱心青年谱佳话</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/7/4/n2956800.md#1">流浪狗断魂 爱心妈妈盼动保加油</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/7/4/n2956801.md#1">结扎放养取代扑杀 流浪动物新生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/26/n2919041.md#1">流浪狗夫妻感人绝恋  3离3聚打动市民</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/28/n2921801.md#1">正德护生慈善会 收养流浪狗</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/6/2/n2925661.md#1">罹患性病令人忧 信义野狗别乱摸</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/6/19/n2942029.md#1">狗狗们围着他享用美食 温馨画面让人感到“喂食”也是一种享受啊！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/6/19/n2942251.md#1">流浪狗找到新家 瘫犬变狗医生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/6/21/n2943386.md#1">捡来的狗难计价  被弄丢判免赔</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/6/28/n2950317.md#1">逃家黑天鹅 飞14公里被犬欺</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/6/30/n2953245.md#1">带流浪狗回美国  爱心青年谱佳话</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/7/4/n2956800.md#1">流浪狗断魂 爱心妈妈盼动保加油</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/7/4/n2956801.md#1">结扎放养取代扑杀 流浪动物新生</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/22/n10326635.md#1" target="_blank">杨宁：“四二五”政治构陷 江派黑手待拿下</a></li><li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10706291.md#1" target="_blank">波兰中欧经济论坛 政要签名支持控告江泽民</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank">【2019盘点】响彻世界政坛的正义之声</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/14/n12688510.md#1">古籍记载：死而复活的人讲述前后因果</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/15/8/17/n4506003.md#1">怎么对：头头是道 谁宾谁主  吃一碗各自西东</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/16/8/1/n8156207.md#1">富者与贫者 谁有资格骄傲？</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/21/n12701921.md#1">【西岸观察】川普承诺回归 祝拜登政府好运</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/20/12/9/n12607404.md#1">【思想领袖】伯顿：反击中共压制学术自由</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/21/n12702067.md#1">【唐青看时事】含泪出征 拜登对华政策观察</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12701395.md#1">拜登：川普给我留下一封“非常仁慈”的信</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12698957.md#1">【秦鹏直播】川普告别演讲 释放何信息？</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12699391.md#1">【重播】川普总统离任仪式 飞抵佛罗里达</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/19/n12698651.md#1">获章子怡热情颁奖 赵丽颖一动作引赞赏</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12698979.md#1">郑爽代孕风波引爆舆论 杨颖等女星无辜受牵连</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/19/n12698452.md#1">郑爽代孕弃养丑闻发酵 合作方纷纷解约和封杀</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/19/n12697332.md#1">唐绮阳身体出状况 感伤今年运势书将是告别作</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12699972.md#1">林心如回忆创业遇撞墙：把鸟事化无事</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/16/n12692356.md#1">逆转高血糖！中医3茶饮调体质 不让糖尿病上身</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/18/n12696400.md#1">专家：抗疫或已走入一个误区 人类应反省自身</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12699617.md#1">英媒卧底调查：武汉医生被政府要求隐瞒疫情</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/16/n12691930.md#1">大寒是吃种子最佳时节！肾虚者别错过最后机会</a></li>
-<li><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/21/1/20/n12699879.md#1">天天化妆22年的妻子决定周日公休 丈夫抱怨</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rnrmrq3333/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rnrmrq3333/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/7/4/n2956799.htm">宠物登记加绝育 减少流浪狗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/7/4/n2956799.htm">宠物登记加绝育 减少流浪狗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rnrmrq3333/djy/blob/master/gb/10/7/4/n2956799.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rnrmrq3333/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rnrmrq3333/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rnrmrq3333/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rnrmrq3333/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/10/7/4/n2956799.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
